--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
+    "nyc": "^15.1.0",
+    "tap-diff": "^0.1.1",
+    "tape": "^5.0.1",
     "typescript": "^4.0.3"
   }
 }
