--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "front-matter": "^4.0.2"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.6",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
