--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^11.15.33",
     "bunyan": "^1.8.14",
     "front-matter": "^4.0.2"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
+    "@types/node": "^14.14.2",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
     "nyc": "^15.1.0",
+    "source-map-support": "^0.5.19",
     "tap-diff": "^0.1.1",
     "tape": "^5.0.1",
     "typescript": "^4.0.3"
