--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
     "@types/node": "^14.14.2",
+    "@types/source-map-support": "^0.5.3",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
