--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "page-builder",
+  "name": "web-md-bundler",
   "version": "2.0.0",
-  "description": "Builds markdown files into a single JSON file, for web-client consumption.",
+  "description": "Bundles markdown files into a single JSON file, for web-client consumption.",
   "main": "index.js",
   "scripts": {
     "test": "tape ./specs/*.js | tap-diff",
