--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "bunyan": "^1.8.14",
-    "front-matter": "^4.0.2"
+    "front-matter": "^4.0.2",
+    "markdown-it": "^12.0.2",
+    "markdown-it-deflist": "^2.1.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
+    "@types/markdown-it": "^10.0.2",
     "@types/node": "^14.14.2",
     "@types/source-map-support": "^0.5.3",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "del": "^6.0.0",
     "eslint": "^7.12.0",
     "import-fresh": "^3.2.1",
     "nyc": "^15.1.0",
