--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "web-md-bundler",
+  "name": "@everything_explained/web-md-bundler",
   "version": "2.4.0",
   "description": "Bundles markdown files into a single JSON file, for web-client consumption.",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "tape ./specs/*.js | tap-diff",
     "cov": "nyc --reporter=lcov tape ./specs/*.js | tap-diff"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Everything-Explained/web-md-bundler"
+  },
+  "author": "Jaeiya",
   "license": "ISC",
   "dependencies": {
     "bunyan": "^1.8.14",
     "front-matter": "^4.0.2",
+    "import-fresh": "^3.2.2",
     "markdown-it": "^12.0.2",
     "markdown-it-deflist": "^2.1.0"
   },
@@ -25,7 +30,6 @@
     "@typescript-eslint/parser": "^4.5.0",
     "del": "^6.0.0",
     "eslint": "^7.12.0",
-    "import-fresh": "^3.2.1",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "tap-diff": "^0.1.1",
