--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "front-matter": "^4.0.2",
     "import-fresh": "^3.2.2",
     "markdown-it": "^12.0.2",
-    "markdown-it-deflist": "^2.1.0",
-    "markdown-it-video": "^0.6.3"
+    "markdown-it-deflist": "^2.1.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
