--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "tape ./specs/*.js | tap-diff",
+    "test": "tape ./specs/md_page_bundler.test.js | tap-diff",
     "cov": "nyc --reporter=lcov tape ./specs/*.js | tap-diff"
   },
   "repository": {
@@ -17,24 +17,24 @@
   "dependencies": {
     "bunyan": "^1.8.14",
     "front-matter": "^4.0.2",
-    "import-fresh": "^3.2.2",
-    "markdown-it": "^12.0.2",
+    "import-fresh": "^3.3.0",
+    "markdown-it": "^12.0.4",
     "markdown-it-deflist": "^2.1.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
-    "@types/markdown-it": "^10.0.2",
-    "@types/node": "^14.14.2",
+    "@types/markdown-it": "^10.0.3",
+    "@types/node": "^14.14.14",
     "@types/source-map-support": "^0.5.3",
     "@types/tape": "^4.13.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "del": "^6.0.0",
-    "eslint": "^7.12.0",
+    "eslint": "^7.16.0",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "tap-diff": "^0.1.1",
     "tape": "^5.0.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.3"
   }
 }
