--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "front-matter": "^4.0.2",
     "import-fresh": "^3.3.0",
     "markdown-it": "^12.0.4",
-    "markdown-it-deflist": "^2.1.0"
+    "markdown-it-deflist": "^2.1.0",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
